fix(globals): ensure body has consistent max-width and overflow properties

--- a/styles/base/globals.scss
+++ b/styles/base/globals.scss
@@ -32,6 +32,8 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
+  max-width: 100vw;
+  overflow-x: hidden !important;
 }
 
 .section {
